--- a/Resources/views/Tracking/gtm/enhanced/checkout.js.twig
+++ b/Resources/views/Tracking/gtm/enhanced/checkout.js.twig
@@ -1,1 +1,1 @@
-dataLayer.push({ 'event': 'csCheckout', 'checkout': {{ actionData|json_encode()|raw }} });
+dataLayer.push({'event': 'csCheckout', 'ecommerce': {'checkout': {{ actionData|json_encode()|raw }} }});
