--- a/Resources/views/Tracking/gtm/enhanced/checkout_complete.js.twig
+++ b/Resources/views/Tracking/gtm/enhanced/checkout_complete.js.twig
@@ -1,1 +1,1 @@
-dataLayer.push({'ecommerce' : { 'purchase' : {{ actionData|json_encode()|raw }} } });
+dataLayer.push({'event': 'csPurchase', 'ecommerce' : { 'purchase' : {{ actionData|json_encode()|raw }} } });
