--- a/Resources/views/Tracking/gtm/enhanced/product_impression.js.twig
+++ b/Resources/views/Tracking/gtm/enhanced/product_impression.js.twig
@@ -1,1 +1,1 @@
-dataLayer.push({'ecommerce' : {{ actionData|json_encode()|raw }} });
+dataLayer.push({'event': 'csProductImpressions', 'ecommerce' : {{ actionData|json_encode()|raw }} });
