--- a/Resources/views/Tracking/gtm/enhanced/product_view.js.twig
+++ b/Resources/views/Tracking/gtm/enhanced/product_view.js.twig
@@ -1,1 +1,1 @@
-dataLayer.push({'ecommerce': {'detail': {{ actionData|json_encode()|raw }} }});
+dataLayer.push({'event': 'csProductDetailImpressions', 'ecommerce': {'detail': {{ actionData|json_encode()|raw }} }});
